# slack-summarizer

./: .gitignore  Dockerfile  pyproject.toml
src/: app.py  daily_summary.py  generate_summary.py  scheduler.py
